[package]
name = "hotmic"
version = "0.1.0"
authors = ["Toby Lawrence <toby@nuclearfurnace.com>"]

license = "MIT"

description  = "high-speed metrics collection library"

homepage = "https://github.com/nuclearfurnace/hotmic"
repository = "https://github.com/nuclearfurnace/hotmic"
documentation = "https://docs.rs/hotmic"

readme = "README.md"

leywords = ["stats", "metrics", "telemetry", "histogram", "percentile", "counter"]

[profile.release]
debug = true
opt-level = 3
lto = true

[dependencies]
mio = "^0.6"
lazycell = "1"
crossbeam-channel = "^0.2"
hdrhistogram = "^6.0"
fnv = "^1.0"
log = "^0.4"
env_logger = "^0.5"
getopts = "^0.2"
